# nabla

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: derivations.md
examples/: 01_xor.py  02_spiral.py
nabla/: __init__.py  nn.py  tensor.py  viz.py
tests/: test_gradcheck.py  test_viz.py  test_vs_torch.py
